# Trading-Agent

./: .gitignore  README.md  mcp_config.json  pyproject.toml  requirements.txt  run_api.py  start_all.bat  web_app.py
.kiro/specs/apple-style-ui-redesign/: .config.kiro  requirements.md
data/: sessions.db
data/chroma_db/: chroma.sqlite3
doc/: Trading-Agent_项目优化提示词.docx
experiments/: README.md  __init__.py  report_template.md  run_comparison.py
experiments/results/: experiment_results_20260506_103831.json
frontend/: AUTH_TEST_GUIDE.md  LOGIN_GUIDE.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/analysis/[sessionId]/: page.tsx
frontend/app/chat/: page.tsx
frontend/app/history/: page.tsx
frontend/app/knowledge/: page.tsx
frontend/app/login/: page.tsx
frontend/app/statistics/: page.tsx
frontend/components/analysis/: AgentCards.tsx  DebatePanel.tsx  QueryInput.tsx
frontend/components/auth/: AuthProvider.tsx
frontend/components/charts/: PriceChart.tsx  StockDataPanel.tsx
frontend/components/layout/: AgentSelector.tsx  Header.tsx  Sidebar.tsx
frontend/components/results/: AgentReport.tsx  ExportButtons.tsx  PerformanceMonitor.tsx  ResultTabs.tsx
frontend/lib/: api.ts  stores.ts  useAuth.ts
frontend/pages/: _document.tsx
markdown_reports/: session_20260414_155229_371691_3af1e5f3.md  session_20260414_155229_371691_3af1e5f3_关键分析.md  session_20260414_231524_912540_e5acdb03.md  session_20260414_233058_386155_e30b75e9.md  session_20260415_134906_822541_d6af235e.md
reports/: session_20250813_155051_876202_cf8d90a0.md  session_20260414_151400_039512_22a6f62c.md  session_20260414_194402_730522_9a19bb67.md  session_20260414_194402_730522_9a19bb67_关键分析.md  session_20260414_202151_136508_91e4fdb6.md  session_20260415_134906_822541_d6af235e.md  session_20260415_134906_822541_d6af235e_关键分析.md  session_20260416_133144_087555_ec79fa93.md
scripts/: check_quality.py  run_tests.py
src/: agent_states.py  api_server.py  base_agent.py  mcp_manager.py  progress_tracker.py  workflow_orchestrator.py
src/agents/: prompts.py
src/core/: __init__.py  analysis_cache.py  cache.py  database.py  errors.py  exceptions.py  health.py  logging_config.py  paths.py  rate_limit.py  validators.py  websocket.py
src/dumptools/: json_to_markdown.py
src/export/: md2docx.py  md2pdf.py
src/mcp/: http_client.py
src/rag/: __init__.py  document_loader.py  engine.py  init_knowledge_base.py
src/tools/: http_client.py
storage/sessions/: session_20260414_151400_039512_22a6f62c.json  session_20260414_152252_637345_996ef09b.json  session_20260414_153048_591489_e7db459d.json  session_20260414_153643_496059_81c08eeb.json  session_20260414_154855_127645_81081114.json  session_20260414_155229_371691_3af1e5f3.json  session_20260414_184532_998273_8c4c7547.json  session_20260414_191529_895932_babc6523.json  session_20260414_192843_912725_6f06ef5c.json  session_20260414_194402_730522_9a19bb67.json  session_20260414_202151_136508_91e4fdb6.json  session_20260414_231524_912540_e5acdb03.json  session_20260414_233058_386155_e30b75e9.json  session_20260415_134906_822541_d6af235e.json  session_20260416_133144_087555_ec79fa93.json  session_20260428_164413_112910_950bb223.json  session_20260506_100237_322279_0cb05599.json  session_20260506_100606_244811_65dc3da9.json  session_20260506_101246_727807_95a41f40.json  session_20260506_102301_554689_a20b5f39.json  session_20260506_102640_548539_75f05504.json  session_20260506_103044_239366_e1bb108b.json  session_20260506_103435_798792_80afac71.json
tests/: __init__.py  conftest.py  test_api_endpoints.py  test_cache.py  test_exceptions.py  test_health.py  test_http_client.py  test_rate_limit.py  test_validators.py
(+10 files in other folders)
